<resources>
    <string name="app_name">오디얌</string>
    <string name="check_setting_permission">[설정] &gt; [권한]에서 권한을 활성화해주세요.</string>
    <string name="location_setting_description">위치 기반 서비스 사용을 위해서 위치 서비스 활성화가 필요합니다. 위치 서비스 사용을 활성화해주세요.</string>
    <string name="location_setting_deny">위치 기반 서비스를 제공할 수 없습니다. 사용을 종료합니다.</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="share_request">공유 요청</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="option">Option</string>
    <string name="empty_id">아이디를 입력해주세요.</string>
    <string name="empty_password">비밀번호를 입력해주세요.</string>
    <string name="empty_password_confirm">비밀번호 확인칸에 비밀번호를 다시 입력해주세요.</string>
    <string name="password_not_equal">비밀번호가 서로 일치하지 않습니다.</string>
    <string name="login_success">로그인 성공</string>
    <string name="login_fail">로그인에 실패하였습니다. 아이디나 비밀번호를 다시 확인해주세요.</string>
    <string name="create_account_fail">계정 생성에 실패하였습니다.</string>
    <string name="image_upload_success">이미지 업로드 완료</string>
    <string name="image_upload_fail">이미지 업로드 실패</string>
    <string name="category_hospital">병원</string>
    <string name="category_pharmacy">약국</string>
    <string name="category_gas_station">주유소</string>
    <string name="category_subway_station">지하철</string>
    <string name="category_cafe">카페</string>
    <string name="category_bank">은행</string>
    <string name="category_parking_lot">주차장</string>
    <string name="category_convenience_store">편의점</string>
    <string name="category_food">음식점</string>
    <string name="refresh">이 지역 재검색</string>
    <string name="guidance">안내</string>
    <string name="email_address">이메일 주소</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="progress_continue">계속</string>
    <string name="name">이름</string>
    <string name="create_account">회원가입</string>
    <string name="notification_text">위치 정보 공유 중</string>
    <string name="notification_channel_name">위치</string>
    <string name="notification_channel_description">위치 정보 공유에 대한 표기</string>
    <string name="location_refresh_time">위치 갱신 시간</string>
    <string name="share_qr_code_description">내 위치 정보를 공유해줄 단말로 캡쳐하세요.</string>
    <string name="request_grant">요청 승인</string>
    <string name="request_reject">요청 거절</string>
    <string name="group_info">그룹 정보</string>
    <string name="wait_grant">승인 대기</string>
    <string name="location_verified_list">위치 확인 목록</string>
    <string name="my_profile">내 프로필</string>
    <string name="request_share_location_not_exist">시스템에 등록된 이메일이 존재하지 않습니다.\n가입된 이메일이 맞는지 다시 확인 해주세요.</string>
    <string name="request_share_location_cancel">친구 요청에 실패하였습니다.</string>
    <string name="request_share_location_success">친구에게 위치 공유를 요청하였습니다.</string>
    <string name="request_share_location_wrong_id">본인 계정이 아닌 상대방의 이메일 계정을 입력해주세요.</string>
    <string name="request_share_location_description">서로간의 위치 정보 공유를 요청하고싶은 유저의 이메일을 입력하세요.\n상대방이 요청을 수락하면 서로간의 위치 정보 공유가 시작됩니다.</string>
    <string name="permission_location_info_1">상대방과의 위치 공유를 위해 \'항상 허용\'으로 권한 설정이 필요합니다.</string>
    <string name="permission_location_info_2">위치 공유 서비스가 정상적으로 동작하려면 \n권한이 필요합니다.</string>
    <string name="location">위치</string>

</resources>