<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/permission_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/permission_location_info_2"
            android:textSize="19sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/permission_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_marginStart="20dp"
            android:text="@string/location"
            android:textSize="16sp"
            android:gravity="start"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:drawableStart="@drawable/btn_location"
            android:drawablePadding="4dp"
            tools:text="위치"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permission_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/permission_subtitle_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/permission_location_info_1"
            android:textSize="15sp"
            android:gravity="start"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permission_subtitle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/progress_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="26dp"
            android:padding="12dp"
            android:text="@string/progress_continue"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
